[project]
name = "neon-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain[google,googleai]>=1.2.14",
    "requests>=2.33.1",
    "websockets>=16.0",
    "aiohttp>=3.9.0",
    "numexpr>=2.8.0",
]
